@@ -4,7 +4,9 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.function.BiConsumer;
 
+import de.mrjulsen.paw.components.WireConnectionDataComponent;
 import de.mrjulsen.paw.registry.ModBlockTags;
+import de.mrjulsen.paw.registry.ModDataComponents;
 import org.joml.Vector3d;
 
 import de.mrjulsen.mcdragonlib.util.TextUtils;
@@ -89,17 +91,14 @@ public class CatenaryHeadspanWireItem implements IPawWireItemBase {
         }
 
         // --- Decode Item data ---
-        CompoundTag itemData = IWireItemBase.getNbt(stack);
-        CompoundTag customDataNbt = itemData.getCompound(NBT_CUSTOM_DATA);
-        List<CompoundTag> points = new ArrayList<>();        
-        if (itemData.contains(NBT_POINTS)) {
-            points.addAll(itemData.getList(NBT_POINTS, Tag.TAG_COMPOUND).stream().map(x -> (CompoundTag)x).toList());
-        }
+        WireConnectionDataComponent connectionData = ModDataComponents.getComponent(stack, ModDataComponents.WIRE_CONNECTION_DATA, WireConnectionDataComponent::empty);
+        CompoundTag customDataNbt = connectionData.customData();
+        List<CompoundTag> points = new ArrayList<>(connectionData.customPointData());
 
         // --- Set data ---
         if (points.size() < 2) {
-            if (!addNewPoint(level, player, hand, hit, metadata, stack, itemData, customDataNbt, points)) {
-                IWireItemBase.clear(null, stack);
+            if (!addNewPoint(level, player, hand, hit, metadata, stack, connectionData, points)) {
+                clear(stack);
                 return InteractionResult.FAIL;
             }
         } else if (!customDataNbt.contains(NBT_UPPER_WIRE_HEIGHT) || !customDataNbt.contains(NBT_TOP_WIRE_HEIGHT)) {
@@ -116,11 +115,11 @@ public class CatenaryHeadspanWireItem implements IPawWireItemBase {
                         float d = h.getBlockPos().getY() - nB.getBlockPos().getY();
                         if (d < min) { 
                             player.displayClientMessage(TextUtils.translate(KEY_HEIGHT_DIFFERENCE_TOO_SMALL, min, max).withStyle(ChatFormatting.RED), true);
-                            IWireItemBase.clear(null, stack);
+                            clear(stack);
                             return InteractionResult.FAIL;
                         } else if (d > max) { 
                             player.displayClientMessage(TextUtils.translate(KEY_HEIGHT_DIFFERENCE_TOO_LARGE, min, max).withStyle(ChatFormatting.RED), true);
-                            IWireItemBase.clear(null, stack);
+                            clear(stack);
                             return InteractionResult.FAIL;
                         }
                         customDataNbt.putFloat(NBT_UPPER_WIRE_HEIGHT, d);
@@ -131,11 +130,11 @@ public class CatenaryHeadspanWireItem implements IPawWireItemBase {
                         double d = h.getBlockPos().getY() - nB.getBlockPos().getY() - p;
                         if (d < min) { 
                             player.displayClientMessage(TextUtils.translate(KEY_HEIGHT_DIFFERENCE_TOO_SMALL, min, max).withStyle(ChatFormatting.RED), true);
-                            IWireItemBase.clear(null, stack);
+                            clear(stack);
                             return InteractionResult.FAIL;
                         } else if (d > max) { 
                             player.displayClientMessage(TextUtils.translate(KEY_HEIGHT_DIFFERENCE_TOO_LARGE, min, max).withStyle(ChatFormatting.RED), true);
-                            IWireItemBase.clear(null, stack);
+                            clear(stack);
                             return InteractionResult.FAIL;
                         }
                         customDataNbt.putDouble(NBT_TOP_WIRE_HEIGHT, d); // TODO was float
@@ -145,17 +144,12 @@ public class CatenaryHeadspanWireItem implements IPawWireItemBase {
         }
 
         // --- Save data ---
-        ListTag pointsList = new ListTag();
-        for (CompoundTag p : points) {
-            pointsList.add(p);
-        }
-        itemData.put(NBT_POINTS, pointsList);
-        itemData.put(NBT_CUSTOM_DATA, customDataNbt);
-        IWireItemBase.setNbt(stack, itemData);
+        connectionData = new WireConnectionDataComponent(points, customDataNbt);
+        ModDataComponents.setComponent(stack, ModDataComponents.WIRE_CONNECTION_DATA, connectionData);
 
         // --- Create wire ---
-        if (canCreateWire(level, player, hand, hit, stack, itemData, customDataNbt, points)) {
-            WireGraph.CreateEdgeResult result = createWire(level, player, hand, hit, stack, itemData, customDataNbt, points);
+        if (canCreateWire(level, player, hand, hit, stack, connectionData, points)) {
+            WireGraph.CreateEdgeResult result = createWire(level, player, hand, hit, stack, connectionData, points);
             if (result.success()) {
                 removeWireItem(level, player, hand, hit, stack, result.edge().get().length());
             }
@@ -165,32 +159,31 @@ public class CatenaryHeadspanWireItem implements IPawWireItemBase {
     }
 
     @Override
-    public boolean canCreateWire(Level level, Player player, InteractionHand hand, HitResult hit, ItemStack stack, CompoundTag itemData, CompoundTag customDataNbt, List<CompoundTag> points) {
-        return IPawWireItemBase.super.canCreateWire(level, player, hand, hit, stack, itemData, customDataNbt, points) && customDataNbt.contains(NBT_UPPER_WIRE_HEIGHT) && customDataNbt.contains(NBT_TOP_WIRE_HEIGHT);
+    public boolean canCreateWire(Level level, Player player, InteractionHand hand, HitResult hit, ItemStack stack, WireConnectionDataComponent connectionData, List<CompoundTag> points) {
+        return IPawWireItemBase.super.canCreateWire(level, player, hand, hit, stack, connectionData, points) && connectionData.customData().contains(NBT_UPPER_WIRE_HEIGHT) && connectionData.customData().contains(NBT_TOP_WIRE_HEIGHT);
     }
 
     @Override
     public Component createHudInfoText(ItemStack stack, Player player, HitResult hit) {
-        if (!stack.hasTag()) {
+        if (!ModDataComponents.hasComponent(stack, ModDataComponents.WIRE_CONNECTION_DATA)) {
             return null;
         }
-        
-        CompoundTag itemData = IWireItemBase.getNbt(stack);
-        ListTag list = itemData.getList(NBT_POINTS, Tag.TAG_COMPOUND);
-        if (list.size() < 2) {
+
+        WireConnectionDataComponent connectionData = ModDataComponents.getComponent(stack, ModDataComponents.WIRE_CONNECTION_DATA, WireConnectionDataComponent::empty);
+        List<CompoundTag> points = new ArrayList<>(connectionData.customPointData());
+        if (points.size() < 2) {
             return IPawWireItemBase.super.createHudInfoText(stack, player, hit);
         }
 
-        WireGraphClient graph = WireGraphManager.getClient(player.level(), getWireType(stack).getGraphId(itemData));
-        if (graph == null || list.isEmpty()) {
+        WireGraphClient graph = WireGraphManager.getClient(player.level(), getWireType(stack).getGraphId(connectionData));
+        if (graph == null) {
             return null;
         }
 
-        
 
-        CompoundTag customDataNbt = itemData.getCompound(NBT_CUSTOM_DATA);
-        CompoundTag startPointData = (CompoundTag)list.get(0);
-        CompoundTag endPointData = (CompoundTag)list.get(1);
+        CompoundTag customDataNbt = connectionData.customData();
+        CompoundTag startPointData = points.getFirst();
+        CompoundTag endPointData = points.get(1);
         NodeData nodeA = WiresApi.NODE_DATA_REGISTRY.load(startPointData);
         NodeData nodeB = WiresApi.NODE_DATA_REGISTRY.load(endPointData);
         Vector3d pos = nodeB.toWorldPos(graph);
